@@ -1,8 +1,0 @@
-package it.uniroma3.siw.my_restaurant.controller;
-
-import org.springframework.stereotype.Controller;
-
-@Controller
-public class TableController {
-    
-}
