@@ -1,8 +1,0 @@
-package it.uniroma3.siw.my_restaurant.service;
-
-import org.springframework.stereotype.Service;
-
-@Service
-public class TableService {
-    
-}
